Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -630,16 +630,16 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "top_two = top_travel_cities[0:2]\n",
+    "top_two\n",
     "top_travel_cities[0:1]\n",
-    "top_travel_cities[1:2]\n",
-    "top_two\n"
+    "top_travel_cities[1:2]\n"
    ]
   },
   {
